# Smart_Markers

./: CMakeLists.txt  README.md
include/: cam_localization.h  geometry.h  perspective_camera.h  sm_mapping.h  visualizer2d.h  visualizer3d.h  zed.h
pms/: MadgwickAHRS.ino  esp-data.php  pms.ino  pms_diagram.eps  post-esp-data.php  webserver.eps
src/app/: pms_infomatrix_viewer.cpp  pms_orientation_viewer.cpp  save_data_cloud_correction.cpp  test_cam_localization.cpp  test_marker_mapper.cpp  test_sm_mapping.cpp  test_zed.cpp
src/optimization/: cam_localization.cpp  sm_mapping.cpp
src/sensors/: perspective_camera.cpp  zed.cpp
src/utils/: geometry.cpp  visualizer2d.cpp  visualizer3d.cpp
